feature/adding-resource-columns - added description, businesshours & location to resources
