# public/api-spec-v1.yaml
@@ -450,6 +450,15 @@ components:
           type: integer
         email:
           type: string
+        location:
+          type: string
+        time_frame:
+          readOnly: true
+          type: string
+        description:
+          type: string
+        timeFrame:
+          type: string
     Resource.jsonld:
       type: object
       properties:
@@ -484,6 +493,15 @@ components:
         capacity:
           type: integer
         email:
+          type: string
+        location:
+          type: string
+        time_frame:
+          readOnly: true
+          type: string
+        description:
+          type: string
+        timeFrame:
           type: string
   responses: {  }
   parameters: {  }
